# dungeon-generator

./: .gitignore  CMakeLists.txt  Procfile  README.md  deploy.sh  extract_assets.py  flask_server.py  package-lock.json  package.json  rebuild_phaser.py  render_test.py  requirements.txt  run.sh  webpack.config.js
.github/: main.workflow
.github/workflows/: main.yml
assets/: asset_config.yaml
config/: asset_config.yaml  config.yaml
cppsrc/: all_systems.hpp  application.hpp  config.hpp  main.cpp  time.hpp
cppsrc/systems/: renderer_system.hpp  time_system.hpp
cppsrc/utils/: all_includes.hpp  error_utils.hpp  format.hpp  load_png.hpp  singleton.hpp
src/astar/: astar_rewrite.js  basic_astar.js
src/core/: array2d.js  basic_renderer.js  generator.js  random.js  renderer.js  run_phaser.js  setup_phaser.js  utils.js
src/generators/: basic_generator.js  example_room_generator.js  floor_wall_generator.js  room_generator.js
src/tests/: barrel.js  basic_test.js  genrandom.js  isometric_dungeon_render_test.js  isometric_render_test.js  renderer_test.js  room_generation_test.js  test_renderer.js
templates/: error.html  example.html  phaser_template.html
tools/: __init__.py  extract_assets.py  fscache.py  rebuild_phaser_renderer.py  scan_js_deps.py  server.py  services.py  simple_server.py  test.py  utils.py  vfs.py
